Fix FF comment form jumping on comment hover

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1243,6 +1243,7 @@ body {
 
 .comment {
   padding-left: 20px;
+  line-height: 1.5;
   border-left: 3px solid black;
   border-left: 3px solid rgba(0, 0, 0, 0.05);
 }
