--- a/stylesheets/sass/_comments.scss
+++ b/stylesheets/sass/_comments.scss
@@ -6,8 +6,10 @@
 
 .comment {
   padding-left: 20px;
+  line-height: 1.5;
   @include border(left, 3px, solid, $black, 0.05);
 }
+
 .comment-body,
 .comment-info {
 }
